--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClCompile Include="VectorAndArrayTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ArrayTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ReadChar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
