--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="ReadChar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Pentagonal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
