--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -50,5 +50,20 @@
     <ClCompile Include="Pentagonal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pentagonal2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ReloadMax.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TemplateMax.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SaveMap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LessThan.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
